# eidolon

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/bindless/: CMakeLists.txt  main.cpp
examples/rendergraph/: CMakeLists.txt  main.cpp
examples/rendergraph/shaders/: example.slang
examples/test/: CMakeLists.txt  main.cpp
includes/eidolon/: test.hpp
includes/eidolon/core/: components.hpp  core.hpp  ecs.hpp  event.hpp  logger.hpp  window.hpp
includes/eidolon/gfx/: base.hpp  context.hpp  helper.hpp  rendergraph.hpp  types.hpp
scripts/: configure.sh
src/: CMakeLists.txt  text.cpp
src/core/: components.cpp  core.cpp  logger.cpp  window.cpp
src/gfx/: base.cpp  context.cpp  helper.cpp  rendergraph.cpp
